added /dataset/energy metadata redirects

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -90,6 +90,11 @@
 
         # http://linked.data.gov.au/dataset/energy
         # Datasets
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/dataset/energy$                           http://www.linked.data.gov.au/dataset/energy.ttl [R=302,L]
+	RewriteRule ^/dataset/energy.ttl$			http://www.linked.data.gov.au/dataset/energy.ttl [R=302,L]
+	RewriteRule ^/dataset/energy$                           http://www.linked.data.gov.au/dataset/energy.html [R=302,L]
         RewriteRule ^/dataset/energy/$                          https://near.csiro.au/assets/ [R=302,L]
         RewriteRule ^/dataset/energy/(.*)$                      https://near.csiro.au/assets/$1 [R=302,L]
 
