--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -21,6 +21,8 @@
 
         RewriteEngine on
 
+        # homepage
+        RewriteRule ^/$ http://www.linked.data.gov.au/reference.data.gov.au [L,R=302]
 
         # http://reference.data.gov.au/def/ont/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$
