--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -18,6 +18,10 @@
         ProxyPass "/def/"  "http://203.101.224.166/def/"
         ProxyPassReverse "/def/"  "http://203.101.224.166/def/"
 
+        # supports redirects from the persistent domain with nice URIs
+        ProxyPass "/dataset/"  "http://203.101.224.166/dataset/"
+        ProxyPassReverse "/dataset/"  "http://203.101.224.166/dataset/"
+
         # supports CSS and other web theming for the main website and other resources
         ProxyPass "/theme/"  "http://203.101.224.166/theme/"
         ProxyPassReverse "/theme/"  "http://203.101.224.166/theme/"
@@ -25,6 +29,9 @@
         # supports legacy domain reference.data.gov.au by revealing a static dir of its content on this server
         ProxyPass "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
         ProxyPassReverse "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
+
+        ProxyPass "/environment.data.gov.au"  "http://203.101.224.166/environment.data.gov.au"
+        ProxyPassReverse "/environment.data.gov.au"  "http://203.101.224.166/environment.data.gov.au"
 
         # the main AGLDWG static website, source at https://github.com/AGLDWG/AGLDWG-website
         ProxyPass "/"  "http://203.101.224.166/agldwg-website/"
