--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -284,7 +284,26 @@
         #
         #	Vocabularies
         #
-        
+
+        # http://linked.data.gov.au/def/bioregion
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
+	RewriteRule ^/def/bioregion/(.*).ttl$                     http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
+	RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
+	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/rdf+xml [R=302,L]
+	RewriteRule ^/def/bioregion/(.*).(rdf|owl|xml)$           http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/rdf+xml [R=302,L]
+	RewriteCond %{HTTP:Accept} application/ld+json [NC]
+	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/ld+json [R=302,L]
+	RewriteRule ^/def/bioregion/(.*).(json|jsonld|json-ld)$   http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/ld+json [R=302,L]
+	RewriteCond %{HTTP:Accept} text/n3 [NC]
+	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/n3 [R=302,L]
+	RewriteRule ^/def/bioregion/(.*).n3$                      http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/n3 [R=302,L]
+	RewriteCond %{HTTP:Accept} application/n-triples [NC]
+	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
+	RewriteRule ^/def/bioregion/(.*).(nt|ntriples|n-triples)$ http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
+	RewriteRule ^/def/bioregion/(.*)			  http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1 [R=302,QSA,L]
+
+
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -434,6 +453,9 @@
 
         # def/ Register
         RewriteRule ^/def/$                                     http://www.linked.data.gov.au/def/ [L,R=302]
+
+        # dataset/ Register
+        RewriteRule ^/dataset/$                                 http://www.linked.data.gov.au/dataset/ [L,R=302]
 
         #
         #       AGLDWG website - legacy link redirector
