--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -286,6 +286,7 @@
         #
 
         # http://linked.data.gov.au/def/bioregion
+        RewriteRule ^/def/bioregion$                              http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/ibra7 [R=302,QSA,L]
 	RewriteCond %{HTTP:Accept} text/turtle [NC]
 	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
 	RewriteRule ^/def/bioregion/(.*).ttl$                     http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
@@ -302,7 +303,6 @@
 	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
 	RewriteRule ^/def/bioregion/(.*).(nt|ntriples|n-triples)$ http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
 	RewriteRule ^/def/bioregion/(.*)			  http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1 [R=302,QSA,L]
-
 
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
