--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -260,8 +260,8 @@
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geofabric                             http://www.linked.data.gov.au/def/geofabric.ttl? [R=302,L]
-        RewriteRule ^/def/geofabric.ttl$                        http://www.linked.data.gov.au/def/geofabric.ttl [R=302,L]
+        RewriteRule ^/def/geofabric                             http://www.linked.data.gov.au/def/geofabric/geofabric.ttl? [R=302,L]
+        RewriteRule ^/def/geofabric.ttl$                        http://www.linked.data.gov.au/def/geofabric/geofabric.ttl [R=302,L]
         RewriteRule ^/def/geofabric(.*)$                        http://www.linked.data.gov.au/def/geofabric$1 [R=302,L]
 
         # http://linked.data.gov.au/def/placenames
