--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -17,6 +17,8 @@
 
         Options Includes FollowSymLinks MultiViews
 
+	RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
+
         #
         #	PIDs
         #
