--- a/conf/lab.environment.data.gov.au.conf
+++ b/conf/lab.environment.data.gov.au.conf
@@ -7,6 +7,8 @@
 
         Options Includes FollowSymLinks MultiViews
 
+	RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
+
         <Location />
                 ProxyPass http://130.56.251.47/ keepalive=On
                 ProxyPassReverse http://130.56.251.47/
