/dataset/bioregion, Linkset HTML-only redirecrs, minor updates

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -68,6 +68,25 @@
         RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
 
+        # http://linked.data.gov.au/dataset/bioregion
+        RewriteRule ^/dataset/bioregion$                              http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/ibra7 [R=302,QSA,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).ttl$                     http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
+        RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
+        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(rdf|owl|xml)$           http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
+        RewriteCond %{HTTP:Accept} application/ld+json [NC]
+        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(json|jsonld|json-ld)$   http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
+        RewriteCond %{HTTP:Accept} text/n3 [NC]
+        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).n3$                      http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
+        RewriteCond %{HTTP:Accept} application/n-triples [NC]
+        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(nt|ntriples|n-triples)$ http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)                          http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1 [R=302,QSA,L]
+
 
         # http://linked.data.gov.au/dataset/data-policies
         # Dataset
@@ -173,8 +192,8 @@
         # http://linked.data.gov.au/def/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
-        RewriteRule ^/def/agrif(.*).ttl$                        http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
+        RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif/agrif.ttl? [R=302,L]
+        RewriteRule ^/def/agrif(.*).ttl$                        http://www.linked.data.gov.au/def/agrif/agrif.ttl [R=302,L]
         RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
 
@@ -191,8 +210,8 @@
         # requests for .../borehole/... go to .../borehole#...
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/borehole(.*)$                         http://www.linked.data.gov.au/def/borehole.ttl? [R=302,L]
-        RewriteRule ^/def/borehole(.*).ttl$                     http://www.linked.data.gov.au/def/borehole.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*)$                         http://www.linked.data.gov.au/def/borehole/borehole.ttl? [R=302,L]
+        RewriteRule ^/def/borehole(.*).ttl$                     http://www.linked.data.gov.au/def/borehole/borehole.ttl [R=302,L]
         RewriteRule ^/def/borehole$                             http://www.linked.data.gov.au/def/borehole [R=302,L]
         RewriteRule ^/def/borehole/(.*)$                        http://www.linked.data.gov.au/def/borehole/#$1 [R=302,L,NE]
 
@@ -214,19 +233,30 @@
         # all requests for RDF (turtle) just go to the whole borehole.ttl doc
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/dataset(.*)$                          http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
-        RewriteRule ^/def/dataset(.*).ttl$                      http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
-        RewriteRule ^/def/dataset$                              http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
-        RewriteRule ^/def/dataset/(.*)$                         http://www.linked.data.gov.au/def/dataset#$1 [R=302,L]
+        RewriteRule ^/def/dataset(.*)$                          https://raw.githubusercontent.com/AGLDWG/dataset-ont/master/dataset.ttl? [R=302,L]
+        RewriteRule ^/def/dataset(.*).ttl$                      https://raw.githubusercontent.com/AGLDWG/dataset-ont/master/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset(.*)$	                        http://www.linked.data.gov.au/def/dataset#$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/datatype
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/datatype(.*)$                         https://raw.githubusercontent.com/AGLDWG/datatype-ont/master/rdf/datatype.ttl? [R=302,L]
+        RewriteRule ^/def/datatype(.*).ttl$                     https://raw.githubusercontent.com/AGLDWG/datatype-ont/master/rdf/datatype.ttl [R=302,L]
+        RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/AGLDWG/datatype-ont/master/html/datatype.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/fsdf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf.ttl? [R=302,L]
-        RewriteRule ^/def/fsdf(.*).ttl$                         http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf/fsdf.ttl? [R=302,L]
+        RewriteRule ^/def/fsdf(.*).ttl$                         http://www.linked.data.gov.au/def/fsdf/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/geox
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geox(.*)$                             https://raw.githubusercontent.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl? [R=302,L]
+        RewriteRule ^/def/geox(.*).ttl$                         https://raw.githubusercontent.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl [R=302,L]
+        RewriteRule ^/def/geox(.*)$                             https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -235,20 +265,26 @@
         RewriteRule ^/def/gnaf(.*).ttl$                         http://gnafld.net/def/gnaf$1.ttl [R=302,L]
         RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/iso19160-1-address-nz-profile
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$     https://raw.githubusercontent.com/AGLDWG/iso19160-1-address-ont-nz-profile/master/iso19160-1-nz-profile.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ https://raw.githubusercontent.com/AGLDWG/iso19160-1-address-ont-nz-profile/master/iso19160-1-nz-profile.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$     https://raw.githack.com/AGLDWG/iso19160-1-address-ont-nz-profile/master/iso19160-1-nz-profile.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/iso19160-1-address
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/iso19160-1-address(.*)$               http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
-        RewriteRule ^/def/iso19160-1-address(.*).ttl$           http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address(.*)$               http://www.linked.data.gov.au/def/iso19160-1-address$1 [R=302,L]
-
+        RewriteRule ^/def/iso19160-1-address(.*)$               https://raw.githubusercontent.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*).ttl$           https://raw.githubusercontent.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address/Address/code/(.*)$ https://raw.githubusercontent.com/AGLDWG/iso19160-1-address-ont/master/codelist.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$               https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/iso19160-1-address-nz-profile
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl? [R=302,L]
-        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile/iso19160-1-address-nz-profile.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile/iso19160-1-address-nz-profile.ttl [R=302,L]
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1 [R=302,L]
 
 
@@ -258,6 +294,13 @@
         RewriteRule ^/def/loci(.*)$                             http://www.linked.data.gov.au/def/loci/loci.ttl? [R=302,L]
         RewriteRule ^/def/loci.ttl$                             http://www.linked.data.gov.au/def/loci/loci.ttl [R=302,L]
         RewriteRule ^/def/loci(.*)$                             http://www.linked.data.gov.au/def/loci$1 [R=302,L]        
+
+        # http://linked.data.gov.au/def/geoadminfeatures
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geoadminfeatures                     https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.ttl? [R=302,L]
+        RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.ttl [R=302,L]
+        RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -275,36 +318,20 @@
         RewriteMap tolower int:tolower
         RewriteRule ^/def/placenames/(.*)$                      http://www.linked.data.gov.au/def/placenames\#${tolower:$1} [R=302,L,NE]
 
-
         # http://linked.data.gov.au/def/plot
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot.ttl? [R=302,L]
-        RewriteRule ^/def/plot(.*).ttl$                         http://www.linked.data.gov.au/def/plot.ttl [R=302,L]
+        RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot/plot.ttl? [R=302,L]
+        RewriteRule ^/def/plot(.*).ttl$                         http://www.linked.data.gov.au/def/plot/plot.ttl [R=302,L]
         RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot$1 [R=302,L]
 
         #
         #	Vocabularies
         #
 
-        # http://linked.data.gov.au/def/bioregion
-        RewriteRule ^/def/bioregion$                              http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/ibra7 [R=302,QSA,L]
-	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
-	RewriteRule ^/def/bioregion/(.*).ttl$                     http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/turtle [R=302,L]
-	RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
-	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/rdf+xml [R=302,L]
-	RewriteRule ^/def/bioregion/(.*).(rdf|owl|xml)$           http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/rdf+xml [R=302,L]
-	RewriteCond %{HTTP:Accept} application/ld+json [NC]
-	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/ld+json [R=302,L]
-	RewriteRule ^/def/bioregion/(.*).(json|jsonld|json-ld)$   http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/ld+json [R=302,L]
-	RewriteCond %{HTTP:Accept} text/n3 [NC]
-	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/n3 [R=302,L]
-	RewriteRule ^/def/bioregion/(.*).n3$                      http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=text/n3 [R=302,L]
-	RewriteCond %{HTTP:Accept} application/n-triples [NC]
-	RewriteRule ^/def/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
-	RewriteRule ^/def/bioregion/(.*).(nt|ntriples|n-triples)$ http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1?_format=application/n-triples [R=302,L]
-	RewriteRule ^/def/bioregion/(.*)			  http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/def/bioregion/$1 [R=302,QSA,L]
+        # Vocab: TERN AusPlots Vocabulary
+        # http://linked.data.gov.au/def/ausplots-cv
+        RewriteRule ^/def/ausplots-cv(.*)$                      http://linkeddata.tern.org.au/viewer/ausplots/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -453,12 +480,25 @@
         #         Header always set ExpiresDefault "access plus 10 minutes"
         # </Location>
 
-        # def/ Register
-        RewriteRule ^/def/$                                     http://www.linked.data.gov.au/def/ [L,R=302]
+        RewriteRule ^/dataset/mb16mb11				https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]	
+        RewriteRule ^/dataset/mb16cc				https://github.com/CSIRO-enviro-informatics/mb16cc-linkset [L,R=302]
+	RewriteRule ^/dataset/addr1605mb11			https://github.com/CSIRO-enviro-informatics/addr1605mb11-linkset [L,R=302]
+        RewriteRule ^/dataset/addr1605mb16			https://github.com/CSIRO-enviro-informatics/addr1605mb16-linkset [L,R=302]
+        RewriteRule ^/dataset/addrmb11				https://github.com/CSIRO-enviro-informatics/addrmb11-linkset [L,R=302]
+        RewriteRule ^/dataset/addrmb16				https://github.com/CSIRO-enviro-informatics/addrmb16-linkset [L,R=302]
+        RewriteRule ^/dataset/addrcatch				https://github.com/CSIRO-enviro-informatics/addrcatch-linkset [L,R=302]
+
 
         # dataset/ Register
         RewriteRule ^/dataset/$                                 http://www.linked.data.gov.au/dataset/ [L,R=302]
 
+        # def/ Register
+        RewriteRule ^/def/$                                     http://www.linked.data.gov.au/def/ [L,R=302]
+
+        # def/ Register
+        RewriteRule ^/org/$                                     http://www.linked.data.gov.au/org/ [L,R=302]
+	RewriteRule ^/org/connegp$				http://www.linked.data.gov.au/org/connegp.html [L,R=302]
+        RewriteRule ^/org/(.*)$                                 http://catalogue.linked.data.gov.au/org/$1 [L,R=302]
         #
         #       AGLDWG website - legacy link redirector
         #
