--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -15,12 +15,16 @@
         ProxyPassReverse "/agrif-demo"  "http://203.101.224.166/agrif-demo"
 
         # supports redirects from the persistent domain with nice URIs
+        ProxyPass "/dataset/"  "http://203.101.224.166/dataset/"
+        ProxyPassReverse "/dataset/"  "http://203.101.224.166/dataset/"
+
+        # supports redirects from the persistent domain with nice URIs
         ProxyPass "/def/"  "http://203.101.224.166/def/"
         ProxyPassReverse "/def/"  "http://203.101.224.166/def/"
 
         # supports redirects from the persistent domain with nice URIs
-        ProxyPass "/dataset/"  "http://203.101.224.166/dataset/"
-        ProxyPassReverse "/dataset/"  "http://203.101.224.166/dataset/"
+        ProxyPass "/org/"  "http://203.101.224.166/org/"
+        ProxyPassReverse "/org/"  "http://203.101.224.166/org/"
 
         # supports CSS and other web theming for the main website and other resources
         ProxyPass "/theme/"  "http://203.101.224.166/theme/"
