--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -298,9 +298,9 @@
         # http://linked.data.gov.au/def/geoadminfeatures
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geoadminfeatures                     https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.ttl? [R=302,L]
-        RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.ttl [R=302,L]
-        RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/gsq-geoadminfeatures-ont/master/geoadminfeatures.html$1 [R=302,L]
+        RewriteRule ^/def/geoadminfeatures                     https://raw.githubusercontent.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.ttl? [R=302,L]
+        RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githubusercontent.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.ttl [R=302,L]
+        RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -366,6 +366,11 @@
         # http://linked.data.gov.au/def/borehole-surface-circumstance
         RewriteRule ^/def/borehole-surface-circumstance/?$      https://vocabs.gsq.digital/vocabulary/borehole-surface-circumstance [R=302,L]
         RewriteRule ^/def/borehole-surface-circumstance(.*)$    https://vocabs.gsq.digital/object?vocab_id=borehole-surface-circumstance&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
+        # Vocab: Data Access Rights
+        # http://linked.data.gov.au/def/data-access-rights
+        RewriteRule ^/def/data-access-rights/?$                    https://vocabs.gsq.digital/vocabulary/data-access-rights [R=302,L]
+        RewriteRule ^/def/data-access-rights(.*)$                  https://vocabs.gsq.digital/object?vocab_id=data-access-rights&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
     
         # Vocab: Borehole Status
         # http://linked.data.gov.au/def/borehole-status
@@ -395,6 +400,11 @@
         RewriteRule ^/def/geochemistry-sampling-method/?$       https://vocabs.gsq.digital/vocabulary/geochemistry-sampling-method [R=302,L]
         RewriteRule ^/def/geochemistry-sampling-method(.*)$     https://vocabs.gsq.digital/object?vocab_id=geochemistry-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
+        # Vocab: Georesource Report Type
+        # http://linked.data.gov.au/def/geophysical-survey
+        RewriteRule ^/def/georesource-report/?$                 https://vocabs.gsq.digital/vocabulary/georesource-report [R=302,L]
+        RewriteRule ^/def/georesource-report(.*)$               https://vocabs.gsq.digital/object?vocab_id=georesource-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
+
         # Vocab: Geophysical Survey
         # http://linked.data.gov.au/def/geophysical-survey
         RewriteRule ^/def/geophysical-survey/?$                 https://vocabs.gsq.digital/vocabulary/geophysical-survey [R=302,L]
@@ -442,6 +452,11 @@
         # http://linked.data.gov.au/def/mining-survey-status
         RewriteRule ^/def/mining-survey-status/?$               https://vocabs.gsq.digital/vocabulary/mining-survey-status [R=302,L]
         RewriteRule ^/def/mining-survey-status(.*)$             https://vocabs.gsq.digital/object?vocab_id=mining-survey-status&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
+
+        # Vocab: ISO19115-1 CI_RoleCode Codelist
+        # http://linked.data.gov.au/def/iso19115-1/RoleCode
+        RewriteRule ^/def/iso19115-1/RoleCode/?$             https://vocabs.gsq.digital/vocabulary/RoleCode [R=302,L]
+        RewriteRule ^/def/iso19115-1/RoleCode(.*)$           https://vocabs.gsq.digital/object?vocab_id=RoleCode&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Sampling Method
         # http://linked.data.gov.au/def/sampling-method
