all redirect for linked.data.gov.au not using www server

--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -38,6 +38,6 @@
         ProxyPassReverse "/environment.data.gov.au"  "http://203.101.224.166/environment.data.gov.au"
 
         # the main AGLDWG static website, source at https://github.com/AGLDWG/AGLDWG-website
-        ProxyPass "/"  "http://203.101.224.166/agldwg-website/"
-        ProxyPassReverse "/"  "http://203.101.224.166/agldwg-website/"
+        ProxyPass "/"  "https://agldwg.github.io/website/"
+        ProxyPassReverse "/"  "https://agldwg.github.io/website/"
 </VirtualHost>
