updated AGRIF legacy PID

--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -25,12 +25,11 @@
         RewriteRule ^/$ http://www.linked.data.gov.au/reference.data.gov.au [L,R=302]
 
         # http://reference.data.gov.au/def/ont/agrif
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1.ttl [R=302,L]
-        RewriteRule ^/def/ont/agrif.ttl$ http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
-        RewriteRule ^/def/ont/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
+        RewriteRule ^/def/ont/agrif(.*)$ https://raw.githack.com/agldwg/agrif-ont/master/agrif.ttl [R=302,L]
+        RewriteRule ^/def/ont/agrif.ttl$ https://raw.githack.com/agldwg/agrif-ont/master/agrif.ttl [R=302,L]
+        RewriteRule ^/def/ont/agrif(.*)$ https://raw.githack.com/agldwg/agrif-ont/master/agrif.html$1 [R=302,L]
 
 
         # http://reference.data.gov.au/def/ont/iso19160-1-address
