--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -310,9 +310,9 @@
         # http://linked.data.gov.au/def/plot
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/plot(.*)$                             https://bbcdn.githack.com/terndatateam/ternplotdata-ontology/raw/master/schema/plot.ttl? [R=302,L]
-        RewriteRule ^/def/plot(.*).ttl$                         https://bbcdn.githack.com/terndatateam/ternplotdata-ontology/raw/master/schema/plot.ttl [R=302,L]
-        RewriteRule ^/def/plot(.*)$                             https://bbcdn.githack.com/terndatateam/ternplotdata-ontology/raw/master/docs/plot.html$1 [R=302,L]
+        RewriteRule ^/def/plot(.*)$                             https://raw.githack.com/ternaustralia/ontology_tern-plot/master/docs/tern-plot.ttl [R=303,L]
+        RewriteRule ^/def/plot(.*).ttl$                         https://raw.githack.com/ternaustralia/ontology_tern-plot/master/docs/tern-plot.ttl [R=303,L]
+        RewriteRule ^/def/plot(.*)$                             https://ternaustralia.github.io/ontology_tern-plot/ [R=303,L]
 
         #
         #	Vocabularies
