removed all redirects/proxies to old webserver

--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -9,35 +9,6 @@
 
         RewriteEngine  on
 
-        ProxyPass "/nonresolving-uri"  "http://203.101.224.166/nonresolving.html"
-
-        ProxyPass "/agrif-demo"  "http://203.101.224.166/agrif-demo"
-        ProxyPassReverse "/agrif-demo"  "http://203.101.224.166/agrif-demo"
-
-        # supports redirects from the persistent domain with nice URIs
-        ProxyPass "/dataset/"  "http://203.101.224.166/dataset/"
-        ProxyPassReverse "/dataset/"  "http://203.101.224.166/dataset/"
-
-        # supports redirects from the persistent domain with nice URIs
-        ProxyPass "/def/"  "http://203.101.224.166/def/"
-        ProxyPassReverse "/def/"  "http://203.101.224.166/def/"
-
-        # supports redirects from the persistent domain with nice URIs
-        ProxyPass "/org/"  "http://203.101.224.166/org/"
-        ProxyPassReverse "/org/"  "http://203.101.224.166/org/"
-
-        # supports CSS and other web theming for the main website and other resources
-        ProxyPass "/theme/"  "http://203.101.224.166/theme/"
-        ProxyPassReverse "/theme/"  "http://203.101.224.166/theme/"
-
-        # supports legacy domain reference.data.gov.au by revealing a static dir of its content on this server
-        ProxyPass "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
-        ProxyPassReverse "/reference.data.gov.au"  "http://203.101.224.166/reference.data.gov.au"
-
-        ProxyPass "/environment.data.gov.au"  "http://203.101.224.166/environment.data.gov.au"
-        ProxyPassReverse "/environment.data.gov.au"  "http://203.101.224.166/environment.data.gov.au"
-
         # the main AGLDWG static website, source at https://github.com/AGLDWG/AGLDWG-website
-        ProxyPass "/"  "https://agldwg.github.io/website/"
-        ProxyPassReverse "/"  "https://agldwg.github.io/website/"
+        RewriteRule (.*)  "https://agldwg.github.io/website$1" [L]
 </VirtualHost>
