added proxies to catalogue server for /def/, /dataset/, /org/

--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -11,7 +11,8 @@
 
         RewriteEngine  on
 
-        ServerAdmin webmaster@localhost
+        ServerAdmin nicholas.car@surroundaustralia.com
+#	LogLevel warn rewrite:trace3
         ErrorLog ${APACHE_LOG_DIR}/linked.data.gov.au/error.log
         CustomLog ${APACHE_LOG_DIR}/linked.data.gov.au/access.log combined
 
@@ -111,11 +112,11 @@
 
         # http://linked.data.gov.au/dataset/energy
         # Datasets
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/dataset/energy$                           http://www.linked.data.gov.au/dataset/energy.ttl [R=302,L]
-	RewriteRule ^/dataset/energy.ttl$			http://www.linked.data.gov.au/dataset/energy.ttl [R=302,L]
-	RewriteRule ^/dataset/energy$                           http://www.linked.data.gov.au/dataset/energy.html [R=302,L]
+	RewriteRule ^/dataset/energy$                           https://raw.githack.com/AGLDWG/energy-dataset/master/energy.ttl [R=302,L]
+	RewriteRule ^/dataset/energy.ttl$			https://raw.githack.com/AGLDWG/energy-dataset/master/energy.ttl [R=302,L]
+	RewriteRule ^/dataset/energy$                           https://raw.githack.com/AGLDWG/energy-dataset/master/energy.html [R=302,L]
         RewriteRule ^/dataset/energy/$                          https://near.csiro.au/assets/ [R=302,L]
         RewriteRule ^/dataset/energy/(.*)$                      https://near.csiro.au/assets/$1 [R=302,L]
 
@@ -202,6 +203,15 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.ttl? [R=302,L]
         RewriteRule ^/def/asgs(.*).ttl$                         https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.rdf? [R=302,L]
+        RewriteRule ^/def/asgs(.*).rdf$                         https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.rdf [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^/def/asgs                                  https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.jsonld? [R=302,L]
+        RewriteRule ^/def/asgs(.*).jsonld$                      https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.jsonld [R=302,L]
+
         RewriteRule ^/def/asgs(.*)$                             https://raw.githack.com/AGLDWG/asgs-ont/master/asgs.html$1 [R=302,L]
 
         # CRS Th - must occur before CRS ont else pattern clash
@@ -339,11 +349,12 @@
 
 
         # http://linked.data.gov.au/def/reg-status
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/reg-status(.*)$                       http://www.linked.data.gov.au/def/reg-status$1.ttl? [R=302,L]
-        RewriteRule ^/def/reg-status(.*).ttl$                   http://www.linked.data.gov.au/def/reg-status$1.ttl [R=302,L]
-        RewriteRule ^/def/reg-status(.*)$                       http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
+        RewriteRule ^/def/reg-status(.*)$                       https://raw.githack.com/AGLDWG/reg-status/master$1.ttl? [R=302,L]
+        RewriteRule ^/def/reg-status(.*).ttl$                   https://raw.githack.com/AGLDWG/reg-status/master$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-status/?$                         https://raw.githack.com/AGLDWG/reg-status/master/index.html [R=302,L]
+        RewriteRule ^/def/reg-status(.*)$                       https://raw.githack.com/AGLDWG/reg-status/master$1.html [R=302,L]
 
         # Vocab: Data Access Rights
         # http://linked.data.gov.au/def/data-access-rights
@@ -501,14 +512,21 @@
         RewriteRule ^/dataset/addrcatch				https://github.com/CSIRO-enviro-informatics/addrcatch-linkset [L,R=302]
 
 
+	ProxyPreserveHost On
+
+	ProxyPass	/org/connegp                            http://203.101.224.217/connegp.html
+	ProxyPass	/def/					http://203.101.224.217/defs.php
+	ProxyPass	/dataset/				http://203.101.224.217/datasets.php
+	ProxyPass	/org/					http://203.101.224.217/orgs.php
+
         # dataset/ Register
-        RewriteRule ^/dataset/$                                 http://www.linked.data.gov.au/dataset/ [L,R=302]
 
         # def/ Register
-#        RewriteRule ^/def/$                                     http://www.linked.data.gov.au/def/ [L,R=302]
 
         # def/ Register
-        RewriteRule ^/org/$                                     http://www.linked.data.gov.au/org/ [L,R=302]
-	RewriteRule ^/org/connegp$				http://www.linked.data.gov.au/org/connegp.html [L,R=302]
-        RewriteRule ^/org/(.*)$                                 http://catalogue.linked.data.gov.au/org/$1 [L,R=302]
+        RewriteRule ^/org/(.+)$                                 http://catalogue.linked.data.gov.au/org/$1 [L,R=302]
+
+	# AGLDWG website
+	RewriteRule ^/?$					http://www.linked.data.gov.au/ [L,R=302]
+	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$                                        http://www.linked.data.gov.au/$1 [L,R=302]
 </VirtualHost>
