--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -253,8 +253,16 @@
         # http://linked.data.gov.au/def/geox
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geox(.*)$                             https://raw.githubusercontent.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl? [R=302,L]
-        RewriteRule ^/def/geox(.*).ttl$                         https://raw.githubusercontent.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl [R=302,L]
+        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl? [R=302,L]
+        RewriteRule ^/def/geox(.*).ttl$                         https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.rdf? [R=302,L]
+        RewriteRule ^/def/geox(.*).rdf$                         https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.rdf [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.jsonld? [R=302,L]
+        RewriteRule ^/def/geox(.*).jsonld$                      https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.jsonld [R=302,L]
         RewriteRule ^/def/geox(.*)$                             https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/gnaf
