--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -185,6 +185,27 @@
         RewriteRule ^/dataset/gnaf-2016-05/(.*).ttl$            http://gnafld.net/2016-05/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/gnaf-2016-05/(.*)$                http://gnafld.net/2016-05/$1 [R=302,L]
 
+
+        # http://linked.data.gov.au/dataset/loci-geometry
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/loci-geometry$                         https://gds.loci.cat/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/loci-geometry.ttl$                     https://gds.loci.cat/index.ttl [R=302,L]
+        RewriteRule ^/dataset/loci-geometry$                         https://gds.loci.cat  [R=302,L]
+        # Top-level Registers
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/loci-geometry/(.*)/$                   https://gds.loci.cat/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*)/index.ttl$          https://gds.loci.cat/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*)/$                   https://gds.loci.cat/$1/ [R=302,L]
+        # sub-dataset objects
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/loci-geometry/(.*)$                    http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
+
         
         #
         #	Ontologies
