fixing some bugs

--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -202,9 +202,9 @@
         # sub-dataset objects
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/loci-geometry/(.*)$                    http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/loci-geometry/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/loci-geometry/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*)$                    https://gds.loci.cat/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*).ttl$                https://gds.loci.cat/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/loci-geometry/(.*)$                    https://gds.loci.cat/$1 [R=302,L]
 
         
         #
