--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -185,6 +185,26 @@
         RewriteRule ^/dataset/gnaf-2016-05/(.*).ttl$            http://gnafld.net/2016-05/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/gnaf-2016-05/(.*)$                http://gnafld.net/2016-05/$1 [R=302,L]
 
+
+        # http://linked.data.gov.au/dataset/placenames
+        # Dataset
+#        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+#        RewriteCond %{HTTP:Accept} text/turtle [NC]
+#        RewriteRule ^/dataset/placenames$                         http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/index.ttl? [R=302,L]
+#        RewriteRule ^/dataset/placenames.ttl$                     http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/index.ttl [R=302,L]
+        RewriteRule ^/dataset/placenames$                         http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/  [R=302,L]
+        # Top-level Registers
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/placenames/(.*)/$                   http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/placenames/(.*)/index.ttl$          http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/placenames/(.*)/$                   http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/ [R=302,L]
+        # sub-dataset objects
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/placenames/(.*).ttl$                http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1 [R=302,L]
         
         #
         #	Ontologies
@@ -347,6 +367,8 @@
         # Vocab: TERN AusPlots Vocabulary
         # http://linked.data.gov.au/def/ausplots-cv
         RewriteRule ^/def/ausplots-cv(.*)$                      http://linkeddata.tern.org.au/viewer/ausplots/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+	RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
+	RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
