Add CORS support for the redirect

--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -20,6 +20,10 @@
 
 	RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
 
+        #CORS
+        Header set Access-Control-Allow-Origin "*"
+
+
         #
         #	PIDs
         #
