--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -552,6 +552,12 @@
         RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
         RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
     
+        # Vocab: Temporal Reference System
+        # http://linked.data.gov.au/def/trs
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_mediatype=text/turtle [R=302,NE,L]
+        RewriteRule ^/def/trs/?$				https://vocabs.gsq.digital/vocabulary/trs [R=302,L]
+        RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Linksets
 
