--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -12,7 +12,7 @@
         RewriteEngine  on
 
         ServerAdmin nicholas.car@surroundaustralia.com
-#	LogLevel warn rewrite:trace3
+	LogLevel warn rewrite:trace3
         ErrorLog ${APACHE_LOG_DIR}/linked.data.gov.au/error.log
         CustomLog ${APACHE_LOG_DIR}/linked.data.gov.au/access.log combined
 
@@ -140,6 +140,27 @@
         RewriteRule ^/dataset/geofabric/(.*)$                   http://geofabricld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/geofabric/(.*).ttl$               http://geofabricld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/geofabric/(.*)$                   http://geofabricld.net/$1 [R=302,L]
+
+
+	# http://linked.data.gov.au/dataset/gnaf
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/qldgeofeatures$                        https://gsq.cat/qldgeofeatures/index.ttl? [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures.ttl$                    https://gsq.cat/qldgeofeatures/index.ttl [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures$                        https://gsq.cat/qldgeofeatures  [R=302,L]
+        # Collections
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/qldgeofeatures/(.*)/$                  https://gsq.cat/qldgeofeatures/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures/(.*)/index.ttl$         https://gsq.cat/qldgeofeatures/$1/?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures/(.*)/$                  https://gsq.cat/qldgeofeatures/$1/ [R=302,L]
+	# Individuals (Features)
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures/(.*).ttl$              https://gsq.cat/qldgeofeatures/feature/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1 [R=302,L]	
 
                         
         # http://linked.data.gov.au/dataset/gnaf
@@ -296,6 +317,9 @@
         RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
 
+	# http://linked.data.gov.au/def/geofeatures
+	include /etc/apache2/sites-available/def-geofeatures.conf
+
         # http://linked.data.gov.au/def/geox
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -359,9 +383,9 @@
         # http://linked.data.gov.au/def/geoadminfeatures
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geoadminfeatures                     https://raw.githubusercontent.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.ttl? [R=302,L]
-        RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githubusercontent.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.ttl [R=302,L]
-        RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/geological-admininstrative-features-ont/master/geoadminfeatures.html$1 [R=302,L]
+        RewriteRule ^/def/geoadminfeatures                     https://raw.githubusercontent.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl? [R=302,L]
+        RewriteRule ^/def/geoadminfeatures.ttl$                https://raw.githubusercontent.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.ttl [R=302,L]
+        RewriteRule ^/def/geoadminfeatures(.*)$                https://raw.githack.com/geological-survey-of-queensland/geoadmin-features-ont/master/geoadminfeatures.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -369,6 +393,14 @@
         RewriteRule ^/def/geofabric                             https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.ttl? [R=302,L]
         RewriteRule ^/def/geofabric.ttl$                        https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.ttl [R=302,L]
         RewriteRule ^/def/geofabric(.*)$                        https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.html$1 [R=302,L]
+
+	# Dept Ag, Water & Environment's Plant Health Surveillance ontology
+        # http://linked.data.gov.au/def/phs
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.ttl? [R=302,L]
+        RewriteRule ^/def/phs(.*).ttl$                        https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.ttl [R=302,L]
+        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -395,6 +427,11 @@
         RewriteRule ^/def/ausplots-cv(.*)$                      http://linkeddata.tern.org.au/viewer/ausplots/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 	RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
 	RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
+        # Vocab: Australian States & Territories
+        # http://linked.data.gov.au/def/australian-states-and-territories
+        RewriteRule ^/def/australian-states-and-territories/?$      https://vocabs.gsq.digital/vocabulary/australian-states-and-territories [R=302,L]
+        RewriteRule ^/def/australian-states-and-territories(.*)$    https://vocabs.gsq.digital/object?vocab_id=australian-states-and-territories&uri=http://%{SERVER_NAME}%{R$
 
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
